# pg-raggraph-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.test.yml
.github/workflows/: ci.yml  parity.yml  sidecar.yml
bench/parity/: compare.py  metrics.md  precheck.py  requirements.txt  resolution_constants.yaml  test_compare_guards.py  test_compare_smoke.py  test_precheck.py  undirected_fixture.jsonl
bench/parity/ci/: parity.yml
bench/parity/corpus/: MANIFEST.yaml  gen_corpus.py
bench/parity/corpus/medium/: .gitkeep
bench/parity/corpus/small/: docs.jsonl
bench/parity/extracted/: GENERATION.md  gen_extracted.py  small.jsonl
bench/parity/query_sets/: large.yaml  medium.yaml  small.yaml  validate_query_sets.py
bench/parity/results/: .gitkeep
docker/: Dockerfile.sidecar
docker/pg-init/: 00-extensions.sql
docs/: dev-setup.md  testing.md
docs/superpowers/plans/: 2026-05-03-pg-raggraph-rs-foundation.md  2026-05-04-pg-raggraph-rs-retrieval-engine.md  2026-05-06-pg-raggraph-rs-ingest-pipeline.md
docs/superpowers/specs/: 2026-05-03-pg-raggraph-rs-extension-design.md
pg_raggraph/: Cargo.toml  pg_raggraph.control
pg_raggraph/sql/: 000_schema.sql  001_tables.sql  002_indexes.sql  003_migrations_table.sql
pg_raggraph/sql/migrations/: 004_retrieval_indexes.sql  005_status_check_atomicity.sql
pg_raggraph/src/: admin.rs  ask.rs  embedding.rs  gucs.rs  ingest.rs  ingest_extracted.rs  ingest_profile.rs  lib.rs  provider_factory.rs  retrieval.rs
pg_raggraph/src/bgw/: embedder_cache.rs  launcher.rs  mod.rs  queue.rs  reaper.rs  spi_client.rs  worker.rs
pg_raggraph_core/: Cargo.toml  build.rs
pg_raggraph_core/src/: embedding.rs  error.rs  lib.rs  parity_constants.rs  types.rs
pg_raggraph_core/src/chunking/: mod.rs  strategy.rs
pg_raggraph_core/src/credentials/: encrypt.rs  master_key.rs  mod.rs  redact.rs
pg_raggraph_core/src/embedding/: mod.rs  onnx.rs
pg_raggraph_core/src/ingest/: content_hash.rs  mod.rs  pg_client.rs  profile.rs  profile_resolve.rs  resolve.rs  run.rs  types.rs
pg_raggraph_core/src/llm/: anthropic.rs  ask.rs  http.rs  mock.rs  mod.rs  ollama.rs  openai.rs  prompt.rs  resolve.rs  retry.rs
pg_raggraph_core/src/llm/prompts/: extraction_system.txt
pg_raggraph_core/src/retrieval/: fixture.rs  mod.rs  mode.rs  query_sql.rs  rrf.rs
pg_raggraph_core/tests/: chunking.rs  credentials.rs  credentials_encrypt.rs  credentials_master_key.rs  embedding.rs  embedding_backend.rs  embedding_onnx.rs  ingest_content_hash.rs  ingest_profile.rs  ingest_resolve.rs  ingest_run_job.rs  ingest_types.rs  llm_anthropic.rs  llm_ask.rs  llm_http.rs  llm_mock.rs  llm_ollama.rs  llm_openai.rs  llm_prompt.rs  llm_resolve.rs  llm_retry.rs  provider_kind.rs  resolution_parity.rs  retrieval_fixture.rs  retrieval_mode.rs  retrieval_query_sql.rs  retrieval_rrf.rs
pg_raggraph_sidecar/: Cargo.toml
pg_raggraph_sidecar/sql/: client.sql
pg_raggraph_sidecar/src/: bootstrap.rs  config.rs  db.rs  embedder.rs  http.rs  jobloop.rs  lib.rs  main.rs  pg_client.rs  provider_factory.rs
pg_raggraph_sidecar/tests/: backoff.rs  bootstrap_files.rs  bootstrap_idempotent.rs  client_sql_pg_net.rs  config_env.rs  credential_interop.rs  e2e_managed_pg.rs  embedder_once.rs  http_ask.rs  ingest_request_shape.rs  jobloop_exactly_once.rs  no_pgrx.rs  parity_matrix.rs  reaper.rs  redact_conn.rs
