[workspace]
resolver = "2"
members = ["pg_raggraph", "pg_raggraph_core", "pg_raggraph_sidecar"]

[workspace.package]
version = "0.1.0-alpha.5"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yonk-labs/pg-raggraph-rs"
homepage = "https://github.com/yonk-labs/pg-raggraph-rs"
authors = ["The Yonk <matt@theyonk.com>"]
rust-version = "1.89"

[workspace.dependencies]
pgrx = "=0.17.0"
pgrx-tests = "=0.17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex-lite = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
