[package]
name = "pg_raggraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_raggraph"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["dep:tempfile"]

[dependencies]
pgrx = { workspace = true }
pg_raggraph_core = { path = "../pg_raggraph_core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
pgrx-tests = { workspace = true }
