[package]
name = "pg_raggraph_sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pg-raggraph-sidecar"
path = "src/main.rs"

[dependencies]
pg_raggraph_core = { path = "../pg_raggraph_core" }
tracing = { workspace = true }
