[package]
name = "pg_raggraph_sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pg_raggraph_sidecar"
path = "src/lib.rs"

[[bin]]
name = "pg-raggraph-sidecar"
path = "src/main.rs"

[dependencies]
pg_raggraph_core = { path = "../pg_raggraph_core" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
